Tue Jan  3 12:40:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/footprint_stats.sh:
        * html/Stats/detailed_footprint.shtml:
        * html/Stats/detailed_performance.shtml:
        * html/Stats/footer.html:
        * html/Stats/index.shtml:
        * html/Stats/navigation.html:
          Updated links, docu, status

        * html/Stats/compilation.shtml:
          Removed this file.

Sat Dec 31 22:12:53 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Timer_Wheel_T.cpp: Changed the call to "delete root" in the
          destructor to "this->free_node (root)" so the ACE_Timer_Wheel_T
          will work properly when provided a custom allocator.  Thanks to
          Koh <k_onishi at mtj dot biglobe dot ne dot jp> for reporting
          this bug and providing a fix.

Fri Dec 30 10:13:59 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-linux.h:
          Added support for ulibc, thanks to Chong Wuk Pak
          <chong dot pak at lmco dot com> for providing the patch. This fixes
          bugzilla 3999

Thu Dec 29 17:29:06 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Mem_Map.cpp (ACE_Mem_Map::map_it): Fixed a missing '('.  Thanks to Johnny for reporting this.

Thu Dec 29 15:14:45 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Mem_Map.cpp (ACE_Mem_Map::map_it): Further improved the
          error checking.  Thanks to JaeSung Lee <berise at gmail dot
          com> for suggesting this.

Tue Dec 27 15:19:56 UTC 2011  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>

        * ace/Mem_Map.cpp (ACE_Mem_Map::map_it): mmap through character
          device doesn't care about it's size, so map with /dev/* is done
          with a special case.  Thanks to JaeSung Lee <berise at gmail dot
          com> for reporting this and providing a fix.

Tue Dec 27 11:39:53 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * NEWS: